--- a/Slides/1/Makefile
+++ b/Slides/1/Makefile
@@ -1,3 +1,5 @@
+# Makefile borrowed from github.com/bos/stanford-cs240h
+DESTDIR=../../www
 MDFILE := $(word 1, $(basename $(wildcard *.md)))
 
 L ?= $(MDFILE)
@@ -7,11 +9,11 @@ all: $(L).html $(L)-slides.html
 
 $(L).html: $(L).md
 	@test -f $<
-	$(PANDOC) -s -t html --mathjax -o $@ $<
+	$(PANDOC) -s -t html --mathjax -o $(DESTDIR)/$@ $<
 
 $(L)-slides.html: $(L).md Makefile $(wildcard ./pandoc/slidy/*)
 	@test -f $<
-	$(PANDOC) --data-dir=./pandoc --offline -s -t slidy --mathjax -o $@ $<
+	$(PANDOC) --data-dir=../pandoc --offline -s -t slidy --mathjax -o $(DESTDIR)/$@ $<
 
 echo: 
 	echo $(MDFILE)
