--- a/Code/Parse1/Makefile
+++ b/Code/Parse1/Makefile
@@ -1,4 +1,4 @@
-BINFILES=pmparsec pm2a
+BINFILES=pmparsec pm2a pm2c pm3a
 GHCOPTS=-O -rtsopts
 
 all: $(BINFILES)
@@ -7,6 +7,12 @@ pmparsec: PlusMinusParsec.hs
 	ghc $(GHCOPTS) -o $@ --make $^
 
 pm2a: PlusMinus2a.hs
+	ghc $(GHCOPTS) -o $@ --make $^
+
+pm2c: PlusMinus2c.hs
+	ghc $(GHCOPTS) -o $@ --make $^
+
+pm3a: PlusMinus3a.hs
 	ghc $(GHCOPTS) -o $@ --make $^
 
 clean:
