Parse2: factor out Applicative

--- a/Code/Parse2/Makefile
+++ b/Code/Parse2/Makefile
@@ -3,7 +3,7 @@ GHCOPTS=-O -rtsopts
 
 all: $(BINFILES)
 
-pm1: PlusMinus1.hs App1.hs
+pm1: PlusMinus1.hs App1.hs Applicative.hs
 	ghc $(GHCOPTS) -o $@ --make $^
 
 clean:
