Par/Makefile: fix eventlog options

--- a/Code/Par/Makefile
+++ b/Code/Par/Makefile
@@ -1,5 +1,5 @@
 BINFILES=parfib badfib
-GHCOPTS=-O2 -rtsopts -threaded
+GHCOPTS=-O2 -rtsopts -threaded -eventlog
 
 %: %.hs
 	ghc $(GHCOPTS) -o $@ --make $^
